Prepare site for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.4",
     "astro-icon": "^1.1.0",
+    "katex": "^0.16.27",
     "marked": "^15.0.4",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.4.3"
   },
